#1382: Fix map filter select arrow position, search arrow position, fold links position, Emergency key border position on RTL, fix margin and spacing right issues in utilities

--- a/src/styles/global/_page-prime-nav.scss
+++ b/src/styles/global/_page-prime-nav.scss
@@ -82,6 +82,11 @@
 
   .Select-placeholder, .Select-input {
     padding-left: $spacing-2;
+
+    [dir='rtl'] & {
+      padding-right: $spacing-2;
+      padding-left: 0;
+    }
   }
 
   .Select-control, .Select-input {
@@ -89,6 +94,10 @@
     background-repeat: no-repeat;
     background-size: 14px;
     background-position: left 44%;
+
+    [dir='rtl'] & {
+      background-position: right 44%;
+    }
   }
 
   .Select-control {
